--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,31 +12,42 @@ html {
 }
 
 .keys {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   min-height: 100vh;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .key {
-  border: 0.4rem solid black;
-  border-radius: 0.5rem;
+  border: .4rem solid black;
+  border-radius: .5rem;
   margin: 1rem;
   font-size: 1.5rem;
-  padding: 1rem 0.5rem;
-  transition: all 0.07s ease;
+  padding: 1rem .5rem;
+  -webkit-transition: all .07s ease;
+  transition: all .07s ease;
   width: 10rem;
   text-align: center;
   color: white;
   background: rgba(0, 0, 0, 0.4);
-  text-shadow: 0 0 0.5rem black;
+  text-shadow: 0 0 .5rem black;
 }
 
 .playing {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
   border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
+  -webkit-box-shadow: 0 0 1rem #ffc600;
+          box-shadow: 0 0 1rem #ffc600;
 }
 
 kbd {
@@ -47,8 +58,7 @@ kbd {
 .sound {
   font-size: 1.2rem;
   text-transform: uppercase;
-  letter-spacing: 0.1rem;
+  letter-spacing: .1rem;
   color: #ffc600;
 }
-
 /*# sourceMappingURL=style.css.map */
